--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/framework-bundle": "5.3.*",
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
+        "symfony/translation-contracts": "^2.4",
         "symfony/yaml": "5.3.*"
     },
     "config": {
@@ -69,6 +70,7 @@
         }
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.4"
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "symfony/maker-bundle": "^1.34"
     }
 }
