--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "symfony/serializer": "5.3.*",
         "symfony/translation-contracts": "^2.4",
         "symfony/twig-bundle": "5.3.*",
+        "symfony/validator": "5.3.*",
         "symfony/yaml": "5.3.*"
     },
     "config": {
